	functions declared virtual.
	* src/querycache.cc: Fix bug where longdescs (in <pkg> tag) were
	assigned instead of appended, causing the previous longdesc chunk to
	be overwritten in cases where the callback is called twice for the
	same longdesc, truncating the description.  Also, call tidy_whitespace
	on those longdescs before writing to querycache.xml.

2005-09-24 Aaron Walker <ka0ttic@gentoo.org>

	* configure.ac: Updated version (1.1.2_alpha4).
	* herdstat/portage/config.cc: Only set _overlays member if its not
	empty (it may be in the env, but empty).
	* src/querycache.cc, src/querycache.hh, src/querycache_xml_handler.cc,
	src/querycache_xml_handler.hh, src/querycachectl.cc, src/Makefile.am:
	Moved querycacheXMLhandler_T into querycache.cc as it's not needed
	outside of it.  Renamed sort_oldest_to_newest() to just sort().  Also
	removed all the libxml++-specific code.
	* src/pkgcache.cc: Use util::destringify<long> instead of strtol().
	* src/action_meta_handler.cc: Remove duplicate code in display()
	member function and display_metadata() helper function.
	* tests/pkg-test.sh: Remove any cache files from tests/localstatedir
	before running the pkg tests in case the cache contains invalid data,
	scewing the test results.

2005-09-23 Aaron Walker <ka0ttic@gentoo.org>

	* herdstat/portage/version.cc, herdstat/portage/version.hh,
	herdstat/portage/find.cc, herdstat/portage/ebuild.cc,
	src/action_versions_handler.cc, tests/src/glob-test.cc:
	s/version_map_T/version_map/g, s/version_string_T/version_string/g,
	s/versions_T/versions/g.

2005-09-21 Aaron Walker <ka0ttic@gentoo.org>

	* herdstat/util/vars.cc, herdstat/util/vars.hh,
	herdstat/portage/config.cc, herdstat/portage/config.hh,
	herdstat/portage/ebuild.cc, herdstat/portage/ebuild.hh,
	src/metacache.cc, src/rc.hh: s/vars_T/vars/g, s/ebuild_T/ebuild/g,
	s/config_T/config/g.
	* herdstat/portage/find.cc, herdstat/portage/find.hh: No need to pass